<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    >
    <RadioGroup 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
        <RadioButton 
            android:id="@+id/radio_host"
            style="@style/left_radio"
            android:drawableLeft="@drawable/btn_left_main"
            android:text="@string/title_fragment_host"
            />
        <RadioButton 
            android:id="@+id/radio_family"
             style="@style/left_radio"
            android:drawableLeft="@drawable/btn_left_family"
            android:text="@string/title_fragment_family"
            />
        <RadioButton 
            android:id="@+id/radio_report"
             style="@style/left_radio"
            android:drawableLeft="@drawable/btn_left_report"
            android:text="@string/title_fragment_report"
            />
    </RadioGroup>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    ></LinearLayout>
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    >
    <Button
        android:id="@+id/btn_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_dev_set"
        android:background="@null"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/btn_left_device"
        android:textColor="@color/tab_left_btn_color"
       />
	<Button
        android:id="@+id/btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_about"
        android:background="@null"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/btn_left_about"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:textColor="@color/tab_left_btn_color"
       />
	</RelativeLayout>
</LinearLayout>